err/rightscale.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rightscale'...
Compiling './lib/python3.5/site-packages/rightscale/RightScale.py'...
***   File "./lib/python3.5/site-packages/rightscale/RightScale.py", line 216
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rightscale/Server.py'...
***   File "./lib/python3.5/site-packages/rightscale/Server.py", line 128
    print "Setting tags for %s to %s" % (self, value)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rightscale/ServerTemplate.py'...
***   File "./lib/python3.5/site-packages/rightscale/ServerTemplate.py", line 17
    print "Looking up %s" % self.href
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rightscale/Tags.py'...
***   File "./lib/python3.5/site-packages/rightscale/Tags.py", line 25
    print "Failed parsing %r" % (params)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rightscale/XMLModel.py'...
***   File "./lib/python3.5/site-packages/rightscale/XMLModel.py", line 55
    except ExpatError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rightscale/util'...
Listing './lib/python3.5/site-packages/rightscale-0.302.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
